# evening_telegram

./: .gitignore  .pre-commit-config.yaml  AGENTSPEC.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  QUICKSTART.md  README.md  example.config.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  verify_installation.py
examples/: config.example.yaml
src/evening_telegram/: __init__.py  __main__.py  cli.py  daemon.py  scheduler.py
src/evening_telegram/config/: __init__.py  loader.py  models.py
src/evening_telegram/llm/: __init__.py  client.py  prompts.py  schemas.py  tracker.py
src/evening_telegram/models/: __init__.py  data.py
src/evening_telegram/output/: __init__.py  email.py  html.py
src/evening_telegram/processing/: __init__.py  clusterer.py  filter.py  generator.py
src/evening_telegram/state/: __init__.py  db.py
src/evening_telegram/telegram/: __init__.py  bot.py  client.py  fetcher.py
src/evening_telegram/templates/: newspaper.html
